--- a/src/css/registrodeglicemia.css
+++ b/src/css/registrodeglicemia.css
@@ -1,31 +1,102 @@
-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+* {
+  margin: 0;
+  padding: 0;
+  
+}
+
+body {
+  background-color: lightcyan;
+}
+
+h1 {
+  text-align: center;
+  font-size: 30px;
+  color: rgb(138, 138, 138);
+  grid-area: title;
+  margin-top: 0;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+nav {
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+  background: #0abab5;
+  height: 8vh;
+}
+.nav-list {
+  margin-top: 5px;
+  list-style: none;
+  
+}
+a:hover {
+  opacity: 0.7;
+}
+
+
+.logo {
+  color: #fff;
+  text-decoration: none;
+  transition: 0.3s;
+  font-size: 24px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+}
+
+.container3 {
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 50;
+  margin-top: 100px;
+}
+
+.card3 {
+  flex-direction: row;
+  background-color: #ffffff80;
+  padding: 30px;
+  border-radius: 4%;
+  box-shadow: 3px 3px 1px 0px #00000060
   }
 
-  label {
-    margin-top: 10px;
-    margin-bottom: 5px;
-  }
 
-  input[type="date"]
-  input[type="time"]
-  input[type="email"] {
+  input {
     width: 100%;
     padding: 10px;
+    justify-content: center;
+    flex-direction: row;
     margin-bottom: 20px;
     border-radius: 5px;
     border: none;
     box-shadow: 0px 0px 5px
     rgba(0, 0, 0, 0.1)
   }
+  
 
-  input[type="submit"] {
-    background-color: #DAFFFE;
-    color: purple;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
+   button {
+    background-color: #0abab5;
+    border-color: #0abab5;
+    color: #fff;
+    padding: 7px;
+    font-family: 'Arvo', serif;
+    font-weight: bold;
+    font-size: 10pt;
+    margin-top: 20px;
     cursor: pointer;
+    outline: none;
+    transition: all .4s ease-out;
+  }
+ 
+  .btn-enviar1 {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1px; 
+  }
+    
+
+  button:hover {
+    background-color: #2196f3;
+    color: #fff;
   }
