--- a/src/css/global.css
+++ b/src/css/global.css
@@ -3,7 +3,8 @@
     padding: 0;
   }
   body {
-      
+      margin: 0;
+      padding: 0;
       background-color: lightcyan;
 
   }
@@ -20,6 +21,22 @@
         padding: 0;
         font-size: 16px;
   }
+
+  nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
+    background: #0abab5;
+    height: 8vh;
+  }
+
+  .nav-list {
+    margin-top: 5px;
+    list-style: none;
+    
+  }
+  
 
   a {
     color: #fff;
@@ -63,20 +80,19 @@
   }
 
   .search-box {
-    position: absolute;
-    top: 60%;
-    left: 52%;
+    position:relative;
+    top: 50%;
+    left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    text-shadow: #0abab5;
     height: 50px;
+    width: 300px;
     padding: 15px;
     border-radius: 40px;
     margin-top: 35px;
     display:flex;
     justify-content:space-around;
     align-items: center;
-    
 
 }
 
@@ -87,7 +103,6 @@
   line-height: 52px;
   line-height: 100%;
   vertical-align: top;
-  margin-top: 65px;
   padding-left: 20px;
   display: flex;
   flex-direction: row;
@@ -130,9 +145,10 @@ button {
 }
 
 
-  .mt-0 {
+.mt-0 {
     color: #fff;
   }
+
  p {
   color: #fff;
  }
@@ -141,25 +157,11 @@ button {
     float:left;
   }
 
-  nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    font-family: system-ui, -apple-system, Helvetica, Arial, sans-serif;
-    background: #0abab5;
-    height: 8vh;
-  }
   
   main {
     background: url("bg.jpg") no-repeat center center;
     background-size: cover;
     height: 92vh;
-  }
-  
-  .nav-list {
-    margin-top: 5px;
-    list-style: none;
-    
   }
   
 
@@ -175,15 +177,11 @@ button {
   
   
   
-  @media (max-width: 999px) {
+  @media (max-width: 767px) {
     body {
-      
       width: 100%;
-      margin: auto;
       padding: 5;
     }
-  
-   
   }
   
 footer {
