--- a/src/css/primeirosocorro.css
+++ b/src/css/primeirosocorro.css
@@ -42,6 +42,16 @@ body {
 
 }
 
+h1 {
+  text-align: center;
+  font-size: 30px;
+  color: rgb(138, 138, 138);
+  grid-area: title;
+  margin-top: 0;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 .accordion {
     max-width: 500px;
     margin: 0 auto;
@@ -60,7 +70,7 @@ body {
   }
   
   .card-body {
-    background-color: #00FFFF;
+    background-color: rgb(223, 223, 223);
     color: rgb(37, 37, 37);
   }
   
