--- a/src/css/sobrenos.css
+++ b/src/css/sobrenos.css
@@ -2,21 +2,21 @@
     margin: 0;
     padding: 0;
   }
-  
+
   body {
       background-color: lightcyan;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
     }
-    .container-f {
+    .container-s {
       display: flex;
       justify-content: center;
       width: 100%;
       margin-top: 100px;
     }
-    
-    .card-f {
+
+    .card-s {
       background-color: #ffffff80;
       padding: 30px;
       box-shadow: 3px 3px 1px 0px #00000060
@@ -29,35 +29,44 @@
       background: #0abab5;
       height: 8vh;
     }
-    
+
     .nav-list {
       margin-top: 5px;
       list-style: none;
-    
+
     }
-    
-    
+
+    h1 {
+        text-align: center;
+        font-size: 30px;
+        color: rgb(138, 138, 138);
+        grid-area: title;
+        margin-top: 0;
+        margin-left: 10px;
+        margin-right: 10px;
+      }
+
     a {
       color: #fff;
       text-decoration: none;
       transition: 0.3s;
-    
+
     }
-    
+
     a:hover {
       opacity: 0.7;
     }
-    
+
     .logo {
       font-size: 24px;
       text-transform: uppercase;
       letter-spacing: 4px;
     }
-  
+
   h1 {
   text-align: center;
   }
-  
+
   ul {
   list-style-type: disc;
   padding-left: 20px;
