--- a/src/css/global.css
+++ b/src/css/global.css
@@ -3,23 +3,11 @@
     padding: 0;
   }
   body {
+    
       margin: 0;
       padding: 0;
       background-color: lightcyan;
 
-  }
-
-  .search-text {
-        font-family: 'Inter', sans-serif;
-        font-family: 'Quicksand', sans-serif;
-        font-family: 'Roboto', sans-serif;
-        line-height: 36px;
-        line-height: 100%;
-        background: none;
-        border: 0;
-        outline: 0;
-        padding: 0;
-        font-size: 16px;
   }
 
   nav {
@@ -55,44 +43,74 @@
     letter-spacing: 4px;
   }
   
-  .text-map {
-    font-family: 'Inter', sans-serif;
-    font-family: 'Quicksand', sans-serif;
-    font-family: 'Roboto', sans-serif;
-    line-height: 100%;
-    font-size: 23px;
-    margin-top: 20px;
-    padding-left: 20px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-      
+  .card {
+    margin: 0;
+    padding: 0;
+    position: relative;
+    margin: 30px;
+    background-color: aliceblue;
   }
 
-  .map {
-    padding: 9px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
+.card-img-top {
+  padding: 0;
+  width: 100%;
+}
 
-  }
+.card-text {
+  color: rgb(97, 97, 97);
+}
 
-  .search-box {
-    position:relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #fff;
-    height: 50px;
-    width: 300px;
-    padding: 15px;
-    border-radius: 40px;
-    margin-top: 35px;
-    display:flex;
-    justify-content:space-around;
-    align-items: center;
+
+
+.overlay {
+  margin: 30px;
+  position:absolute;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.btn-click {
+  background-color: #0abab5;
+  opacity: 0.7;
+  box-shadow: 0 5px 5px 0 rgba(44, 44, 44, 0.849);
+  width: auto;
+  height: 100px;
+  color: #fff;
+  display: inline-block;
+  padding: 15px;
+  position:relative;
+  font-weight: bold;
+  font-size: 20pt;
+  margin-top: 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.btn-click:after {
+  content:"";
+  position:absolute;
+  width:100%;
+  height:100%;
+  background-color:#0CF;
+  opacity:0;
+  border-radius:5px;
+  box-shadow:0 5px 15px 0 rgba(0,0,0,0.3);
+  transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
+  z-index: -1;
+
+}
+
+.btn-click:hover{
+  transform:scale(1.25,1.25);
+}
+
+.btn-click:hover::after {
+
+  opacity: 1;
 
 }
 
@@ -100,6 +118,7 @@
   font-family: 'Mako', sans-serif;
   font-family: 'Poppins', sans-serif;
   font-family: 'Quicksand', sans-serif;
+  margin: 20px;
   line-height: 52px;
   line-height: 100%;
   vertical-align: top;
@@ -112,7 +131,6 @@
 
 button {
   box-shadow:  4px 0px 4px rgba(0, 0, 0, 0.25);
-
 }
 
 .media {
@@ -120,16 +138,15 @@ button {
   border: none;
   text-align: left;
   width: 100%;
-  height: auto;
+  height: 10%;
   margin-bottom: 10px;
-  margin-top: 10px;
-  margin: 9;
+  margin: 7px;
   flex-direction:row-reverse;
   justify-content:space-around;
   align-items: center;
   padding: 5px;
   padding-left: 30px;
-  border-radius: 50px;
+  border-radius: 15px;
   background-color: #0abab5;
   
 }
