--- a/src/css/signup.css
+++ b/src/css/signup.css
@@ -29,8 +29,9 @@ nav {
 a:hover {
   opacity: 0.7;
 }
+
 a {
-  color: #fff;
+  color: #0d009c;
   text-decoration: none;
   transition: 0.3s;
 
@@ -43,7 +44,7 @@ a {
 }
 
 .container {
-  display: flex;
+  display:flex;
   justify-content: center;
   float: inline-start;
   width: 100%;
@@ -55,19 +56,21 @@ a {
   padding: 30px;
   border-radius: 4%;
   box-shadow: 3px 3px 1px 0px #00000060;
-  width: 400px;
+  height: 550px;
+  width: 550px;
 }
 
 h1{
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   color: #0d009c
 }
 
 .label-float input{
-  width: 100%;
+ 
+  width: 90%;
   padding: 5px 5px;
-  display: inline-block;
+  margin-left: 9px;
   border: 0;
   border-bottom: 2px solid #0d009c;
   background-color: transparent;
@@ -154,4 +157,8 @@ button:hover{
   padding: 10px;
   border-radius: 4px;
   display: none;
+}
+
+#text {
+  margin-left: 15px;
 }
